tests/ui/imports/issue-28134.rs
//@ compile-flags: --test

#![allow(soft_unstable)]
#![test]
//~^ ERROR `test` attribute cannot be used at crate level
